--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             href="https://fonts.googleapis.com/css?family=Material+Icons"
             rel="stylesheet"
         />
+        <script src="https://unpkg.com/buefy/dist/components/toast"></script>
     </head>
     <body>
         <noscript>
